--- a/pipfile
+++ b/pipfile
@@ -4,12 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask-mysql = "*"
 flask-mysql-connector = "*"
 flask-bootstrap = "*"
 python-dotenv = "*"
-flask = "*"
-jinja2 = "*"
+flask = "2.3.3"
 flask-wtf = "==1.1.1"
 werkzeug = "==2.3.7"
 
